# ml-fraud-detection

./: .dockerignore  .gitignore  README.md  best_model.pt  dockerfile  pyproject.toml  requirements.txt
api/: main.py  schemas.py  service.py
app/: streamlit_app.py
ml_fraud_detection/inference/: predict.py
ml_fraud_detection/training/: model.py  train.py  utils.py
model_registry/: register_model.py
src/inference/: predict.py
src/training/: dataset.py  model.py  train.py
