[project]
name = "ml-fraud-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagshub>=0.6.3",
    "fastapi>=0.122.0",
    "matplotlib>=3.10.7",
    "mlflow[extras]<3",
    "numpy>=2.3.5",
    "opendatasets>=0.1.22",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]

[tool.setuptools.packages.find]
where = ["."]
